<resources>
    <string name="app_name">TuntZ!</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="login">Acessar</string>
    <string name="criar">Criar conta</string>
    <string name="emailHint">seu@email.com</string>
    <string name="logo">Logotipo</string>
    <string name="senhaHint">********</string>
    <string name="endereco">Endereço</string>
    <string name="enderecoHint">Informe o endereço</string>
    <string name="nome">Nome</string>
    <string name="nomeHint">Nome completo</string>
    <string name="cpf">CPF(apenas números)</string>
    <string name="cpfHint">Ex: 12345678900</string>
    <string name="cnpjHint">Ex: 123456789012345</string>
    <string name="cnpj">CNPJ</string>
    <string name="razao">Razão Social</string>
    <string name="razaoHint">Nome do fornecedor</string>
    <string name="telefone">Telefone</string>
    <string name="telefoneHint">Ex: 42999194511</string>
    <string name="confirmarSenha">Confirme sua senha</string>
    <string name="cadFornecedor">Cadastrar Fornecedor</string>
    <string name="bemVindo">Bem - vindo</string>
    <string name="sair">Voltar</string>
    <string name="cliente">Cliente</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="fornecedor">Fornecedor</string>
    <string name="produto">Produto</string>
    <string name="excluir">Excluir</string>
    <string name="adminP">Administração</string>
    <string name="descricao">Descrição</string>
    <string name="precoVenda">Preço</string>
    <string name="cadProduto">Cadastrar Produto</string>
    <string name="lupa">Lupa</string>
    <string name="pClientes">Clientes encontrados:</string>
    <string name="pFornecedores">Fornecedores encontrados:</string>
    <string name="pEncontrados">Produtos encontrados:</string>
    <string name="alterar">Alterar</string>
    <string name="eCliente">Email cliente</string>
</resources>
