<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="start|center"
            android:text="@string/razao"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtRazao"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/razaoHint"
            android:inputType="text"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/lbCNPJ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="start|center"
            android:text="@string/cnpj"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtCNPJ"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/cnpjHint"
            android:inputType="number"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/lbEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="start|center"
            android:text="@string/telefone"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtTelefone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/telefoneHint"
            android:inputType="phone"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/lbEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="start|center"
            android:text="@string/endereco"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtEndereco"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/enderecoHint"
            android:inputType="text"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnCriar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/botao"
            android:onClick="cadastrarFornecedor"
            android:text="@string/cadFornecedor"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btnSair"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/botao"
            android:onClick="sair"
            android:text="@string/sair"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>