<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="start|center"
            android:text="@string/nome"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtNome"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/nomeHint"
            android:inputType="text"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/lbCPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="start|center"
            android:text="@string/cpf"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtCPF"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/cpfHint"
            android:inputType="number"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/lbEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="start|center"
            android:text="@string/email"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/lbEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="start|center"
            android:text="@string/endereco"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtEndereco"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/enderecoHint"
            android:inputType="text"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/lbSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="start|center"
            android:text="@string/senha"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtSenha"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/senhaHint"
            android:inputType="textPassword"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/lbConfirmarSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="start|center"
            android:text="@string/confirmarSenha"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtConfirmarSenha"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/senhaHint"
            android:inputType="textPassword"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnCriar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/botao"
            android:onClick="criarConta"
            android:text="@string/criar"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btnSair"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/botao"
            android:onClick="sair"
            android:text="@string/sair"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>