<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fundo"
        android:orientation="vertical"

        tools:context="com.example.rmaio.aps.TelaInicio">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:src="@drawable/tuntz" />

        <TextView
            android:id="@+id/lbEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="start|center"
            android:text="@string/email"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            />

        <TextView
            android:id="@+id/lbSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/senha"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtSenha"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/senhaHint"
            android:inputType="textPassword"
            android:paddingEnd="0dp"
            android:paddingStart="0dp"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnAcessar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/botao"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCriar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/botao"
            android:onClick="criarConta"
            android:text="@string/criar"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>