<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/fundo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtSaudaco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/adminP"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/cliente"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCadCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/botao"
            android:onClick="cadastrarCliente"
            android:text="@string/cadastrar"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnPesquisarCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/botao"
            android:onClick="pesquisarCliente"
            android:text="@string/pesquisar"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/txtFornecedores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/fornecedor"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCadFornecedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/botao"
            android:onClick="cadastrarFornecedor"
            android:text="@string/cadastrar"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnPesquisarFornecedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/botao"
            android:onClick="pesquisarFornecedores"
            android:text="@string/pesquisar"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/txtProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/produto"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCadProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/botao"
            android:onClick="cadastrarProduto"
            android:text="@string/cadastrar"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnPesquisarProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/botao"
            android:onClick="pesquisarProduto"
            android:text="@string/pesquisar"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnSair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"

            android:layout_marginStart="20dp"
            android:layout_marginTop="23dp"
            android:background="@color/botao"
            android:onClick="voltar"
            android:text="@string/sair"
            android:textColor="@android:color/white" />
    </LinearLayout>

</ScrollView>