<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txtFornecedor"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnPesquisar"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"
        android:layout_toStartOf="@+id/btnPesquisar"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/fornecedor"
        android:inputType="textPersonName"
        android:paddingBottom="5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp" />

    <ImageButton
        android:id="@+id/btnPesquisar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="21dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/lupa"
        android:src="@drawable/lupa" />

    <TextView
        android:id="@+id/txTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtFornecedor"
        android:layout_below="@+id/txtFornecedor"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/pFornecedores"
        android:textColor="@android:color/white" />

    <ListView
        android:id="@+id/listaFornecedores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnPesquisar"
        android:layout_alignStart="@+id/txTotal"
        android:layout_below="@+id/txTotal"
        android:layout_marginTop="18dp"
        android:background="@android:color/white" />

</RelativeLayout>
