<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbFornecedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="start|center"
            android:text="@string/fornecedor"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spFornecedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@android:color/white"/>

        <TextView
            android:id="@+id/lbNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="start|center"
            android:text="@string/produto"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtProduto"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/produto"
            android:inputType="text"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/lbDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="start|center"
            android:text="@string/descricao"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtDesc"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/descricao"
            android:inputType="text"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/lbPreco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="start|center"
            android:text="@string/precoVenda"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtPreco"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/precoVenda"
            android:inputType="text|numberDecimal"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnCriar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/botao"
            android:onClick="cadastrarProduto"
            android:text="@string/cadProduto"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSair"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/botao"
            android:onClick="voltar"
            android:text="@string/sair"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>